attempted fix for menu cut off on some mobile browsers

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,12 @@ p {
     100% {color: #F05365; opacity: 1;}
 }
 
+body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 main {
     position: relative;
     width: 100%;
@@ -169,7 +175,7 @@ section  {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height:100vh;
+    height: 100vh;
     margin: 20px;
 }
 
